feat: Adicionar estrutura para imagens do Figma com comentários guia

--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
             border-radius: 40px;
             overflow: hidden;
             background: linear-gradient(135deg, #8B4513, #D2691E);
-            background-image: url('https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=888&q=80');
+            /* Substitua por: background-image: url('./assets/images/hero-woman-yellow.jpg'); */
+            background-image: url('https://images.unsplash.com/photo-1594736797933-d0f06ba0608f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -284,6 +285,7 @@
 
         .product-card.dinero-express {
             background: linear-gradient(135deg, #ff6b6b, #ee5a24);
+            /* Para usar imagem do Figma: background-image: url('./assets/images/product-dinero-express.jpg'); */
         }
 
         .product-card.dinero-express .card-content {
@@ -292,6 +294,7 @@
 
         .product-card.cuotas-fijas {
             background: linear-gradient(135deg, #74b9ff, #0984e3);
+            /* Para usar imagem do Figma: background-image: url('./assets/images/product-cuotas-fijas.jpg'); */
         }
 
         .product-card.cuotas-fijas .card-content {
@@ -300,6 +303,7 @@
 
         .product-card.adelanto-dinero {
             background: linear-gradient(135deg, #a29bfe, #6c5ce7);
+            /* Para usar imagem do Figma: background-image: url('./assets/images/product-adelanto.jpg'); */
         }
 
         .product-card.adelanto-dinero .card-content {
@@ -308,6 +312,7 @@
 
         .product-card.porcentaje-ventas {
             background: linear-gradient(135deg, #ffeaa7, #fdcb6e);
+            /* Para usar imagem do Figma: background-image: url('./assets/images/product-porcentaje.jpg'); */
         }
 
         .product-card.porcentaje-ventas .card-content {
