--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
             border-radius: 40px;
             overflow: hidden;
             background: linear-gradient(135deg, #8B4513, #D2691E);
-            /* Substitua por: background-image: url('./assets/images/hero-woman-yellow.jpg'); */
-            background-image: url('https://images.unsplash.com/photo-1594736797933-d0f06ba0608f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80');
+            background-image: url('./assets/images/hero-woman-yellow.jpg');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -285,7 +284,9 @@
 
         .product-card.dinero-express {
             background: linear-gradient(135deg, #ff6b6b, #ee5a24);
-            /* Para usar imagem do Figma: background-image: url('./assets/images/product-dinero-express.jpg'); */
+            background-image: url('./assets/images/product-dinero-rapido.jpg');
+            background-size: cover;
+            background-position: center;
         }
 
         .product-card.dinero-express .card-content {
@@ -294,7 +295,9 @@
 
         .product-card.cuotas-fijas {
             background: linear-gradient(135deg, #74b9ff, #0984e3);
-            /* Para usar imagem do Figma: background-image: url('./assets/images/product-cuotas-fijas.jpg'); */
+            background-image: url('./assets/images/product-invierte.jpg');
+            background-size: cover;
+            background-position: center;
         }
 
         .product-card.cuotas-fijas .card-content {
@@ -303,7 +306,9 @@
 
         .product-card.adelanto-dinero {
             background: linear-gradient(135deg, #a29bfe, #6c5ce7);
-            /* Para usar imagem do Figma: background-image: url('./assets/images/product-adelanto.jpg'); */
+            background-image: url('./assets/images/product-recibe-antes.jpg');
+            background-size: cover;
+            background-position: center;
         }
 
         .product-card.adelanto-dinero .card-content {
@@ -312,7 +317,9 @@
 
         .product-card.porcentaje-ventas {
             background: linear-gradient(135deg, #ffeaa7, #fdcb6e);
-            /* Para usar imagem do Figma: background-image: url('./assets/images/product-porcentaje.jpg'); */
+            background-image: url('./assets/images/product-esqueca.jpg');
+            background-size: cover;
+            background-position: center;
         }
 
         .product-card.porcentaje-ventas .card-content {
