feat: Ajustados caminhos das imagens para usar os nomes corretos do usuario
- hero.png para hero section
- dinero-express.png para produto Dinero Express
- cuotas fijas.png para produto Cuotas Fijas
- adelantos.png para produto Adelanto de Dinero
- ppv.png para produto Porcentaje de Ventas
- requisito_1.png e requisito_2.png para cards de requisitos

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             border-radius: 40px;
             overflow: hidden;
             background: linear-gradient(135deg, #8B4513, #D2691E);
-            background-image: url('./assets/images/hero-woman-yellow.jpg');
+            background-image: url('./assets/images/hero.png');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -284,7 +284,7 @@
 
         .product-card.dinero-express {
             background: linear-gradient(135deg, #ff6b6b, #ee5a24);
-            background-image: url('./assets/images/product-dinero-rapido.jpg');
+            background-image: url('./assets/images/dinero-express.png');
             background-size: cover;
             background-position: center;
         }
@@ -295,7 +295,7 @@
 
         .product-card.cuotas-fijas {
             background: linear-gradient(135deg, #74b9ff, #0984e3);
-            background-image: url('./assets/images/product-invierte.jpg');
+            background-image: url('./assets/images/cuotas fijas.png');
             background-size: cover;
             background-position: center;
         }
@@ -306,7 +306,7 @@
 
         .product-card.adelanto-dinero {
             background: linear-gradient(135deg, #a29bfe, #6c5ce7);
-            background-image: url('./assets/images/product-recibe-antes.jpg');
+            background-image: url('./assets/images/adelantos.png');
             background-size: cover;
             background-position: center;
         }
@@ -317,7 +317,7 @@
 
         .product-card.porcentaje-ventas {
             background: linear-gradient(135deg, #ffeaa7, #fdcb6e);
-            background-image: url('./assets/images/product-esqueca.jpg');
+            background-image: url('./assets/images/ppv.png');
             background-size: cover;
             background-position: center;
         }
@@ -495,10 +495,16 @@
 
         .requirement-card.card1 {
             background: linear-gradient(135deg, #3483fa, #2968c8);
+            background-image: url('./assets/images/requisito_1.png');
+            background-size: cover;
+            background-position: center;
         }
 
         .requirement-card.card2 {
             background: linear-gradient(135deg, #00a650, #00832d);
+            background-image: url('./assets/images/requisito_2.png');
+            background-size: cover;
+            background-position: center;
         }
 
         /* FAQ Section */
