✨ feat: Implementar animação de palavras no Hero
🎯 ANIMAÇÃO DAS PALAVRAS (como no Figma):
• negocio → tienda → lojinha → mercado → negócio
• Scroll vertical suave a cada 2 segundos
• Movimento de -104px por palavra (altura exata)
• Ciclo completo de 10 segundos, loop infinito

🎨 CSS KEYFRAMES:
• @keyframes wordSlide com 5 palavras
• Timing preciso: 18% pausa + 2% transição
• Transform translateY(-104px, -208px, -312px, -416px)
• Suave retorno ao início

📁 ARQUIVOS:
• figma-design.html: Hero principal atualizado
• hero-words-animation-test.html: Teste standalone

🔧 BASEADO NO FIGMA:
• Frame: 5664:18229
• Seção: 'palavras v2 desk'
• Comportamento idêntico ao design original

🚀 Agora a frase fica: 'Creditos para impulsar tu [palavra animada]'

--- a/figma-design.html
+++ b/figma-design.html
@@ -103,6 +103,31 @@
         .cta-button.secondary:hover {
             background: rgba(52, 131, 250, 1);
         }
+
+        /* Hero Words Animation - Exato como no Figma */
+        .animated-words {
+            animation: wordSlide 10s infinite;
+            transform: translateY(0);
+        }
+        
+        @keyframes wordSlide {
+            0% { transform: translateY(0); }
+            18% { transform: translateY(0); }
+            20% { transform: translateY(-104px); }
+            38% { transform: translateY(-104px); }
+            40% { transform: translateY(-208px); }
+            58% { transform: translateY(-208px); }
+            60% { transform: translateY(-312px); }
+            78% { transform: translateY(-312px); }
+            80% { transform: translateY(-416px); }
+            98% { transform: translateY(-416px); }
+            100% { transform: translateY(0); }
+        }
+        
+        /* Smooth transitions for words */
+        .animated-words > div {
+            transition: opacity 0.3s ease;
+        }
     </style>
 </head>
 <body class="bg-white">
