✨ Melhora animação do hero: Implementa scroll suave das palavras (negocio → tienda → lojinha → mercado → negócio) com timing correto de 10s e movimento preciso de 104px por palavra

--- a/index-figma.html
+++ b/index-figma.html
@@ -26,14 +26,20 @@
             line-height: 1;
         }
         @keyframes slideWords {
-            0%, 20% { transform: translateY(0); }
-            25%, 45% { transform: translateY(-120px); }
-            50%, 70% { transform: translateY(-240px); }
-            75%, 95% { transform: translateY(-360px); }
-            100% { transform: translateY(-480px); }
+            0% { transform: translateY(0); }
+            18% { transform: translateY(0); }
+            20% { transform: translateY(-104px); }
+            38% { transform: translateY(-104px); }
+            40% { transform: translateY(-208px); }
+            58% { transform: translateY(-208px); }
+            60% { transform: translateY(-312px); }
+            78% { transform: translateY(-312px); }
+            80% { transform: translateY(-416px); }
+            98% { transform: translateY(-416px); }
+            100% { transform: translateY(0); }
         }
         .animated-words {
-            animation: slideWords 8s infinite;
+            animation: slideWords 10s infinite;
         }
     </style>
 </head>
