--- a/figma-design.html
+++ b/figma-design.html
@@ -27,14 +27,7 @@
         }
         @keyframes slideWords {
             0% { transform: translateY(0); }
-            22% { transform: translateY(0); }
-            25% { transform: translateY(-104px); }
-            47% { transform: translateY(-104px); }
-            50% { transform: translateY(-208px); }
-            72% { transform: translateY(-208px); }
-            75% { transform: translateY(-312px); }
-            97% { transform: translateY(-312px); }
-            100% { transform: translateY(0); }
+            100% { transform: translateY(-416px); }
         }
         .animated-words {
             animation: slideWords 10s infinite;
@@ -190,6 +183,18 @@
                     <!-- Animated Words -->
                     <div class="relative h-[104px] overflow-hidden">
                         <div class="animated-words absolute">
+                            <div class="h-[104px] flex items-center">
+                                <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">tienda</span>
+                            </div>
+                            <div class="h-[104px] flex items-center">
+                                <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">lojinha</span>
+                            </div>
+                            <div class="h-[104px] flex items-center">
+                                <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">mercado</span>
+                            </div>
+                            <div class="h-[104px] flex items-center">
+                                <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">negócio</span>
+                            </div>
                             <div class="h-[104px] flex items-center">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">tienda</span>
                             </div>
