🔄 Reverte para animação com pausas e inicia sempre com 'negócio': Remove duplicação, volta keyframes com pausas (negócio → tienda → lojinha → mercado → loop)

--- a/index-figma.html
+++ b/index-figma.html
@@ -27,7 +27,14 @@
         }
         @keyframes slideWords {
             0% { transform: translateY(0); }
-            100% { transform: translateY(-416px); }
+            22% { transform: translateY(0); }
+            25% { transform: translateY(-104px); }
+            47% { transform: translateY(-104px); }
+            50% { transform: translateY(-208px); }
+            72% { transform: translateY(-208px); }
+            75% { transform: translateY(-312px); }
+            97% { transform: translateY(-312px); }
+            100% { transform: translateY(0); }
         }
         .animated-words {
             animation: slideWords 10s infinite;
@@ -91,15 +98,6 @@
                     <div class="relative h-[104px] overflow-hidden">
                         <div class="animated-words absolute">
                             <div class="h-[104px] flex items-center">
-                                <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">tienda</span>
-                            </div>
-                            <div class="h-[104px] flex items-center">
-                                <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">lojinha</span>
-                            </div>
-                            <div class="h-[104px] flex items-center">
-                                <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">mercado</span>
-                            </div>
-                            <div class="h-[104px] flex items-center">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">negócio</span>
                             </div>
                             <div class="h-[104px] flex items-center">
@@ -110,9 +108,6 @@
                             </div>
                             <div class="h-[104px] flex items-center">
                                 <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">mercado</span>
-                            </div>
-                            <div class="h-[104px] flex items-center">
-                                <span class="text-[80px] font-bold text-black/90 leading-[102px] tracking-[-3.2px]">negócio</span>
                             </div>
                         </div>
                     </div>
