--- a/index.html
+++ b/index.html
@@ -158,7 +158,14 @@
 
         @keyframes wordSlide {
             0% { transform: translateY(0); }
-            100% { transform: translateY(-320px); }
+            22% { transform: translateY(0); }
+            25% { transform: translateY(-80px); }
+            47% { transform: translateY(-80px); }
+            50% { transform: translateY(-160px); }
+            72% { transform: translateY(-160px); }
+            75% { transform: translateY(-240px); }
+            97% { transform: translateY(-240px); }
+            100% { transform: translateY(0); }
         }
 
         .hero-subtitle {
@@ -786,14 +793,10 @@
                         Tienes un crédito para impulsar tu 
                         <div class="animated-word-container">
                             <div class="animated-words">
-                                <div class="word-item">tienda</div>
-                                <div class="word-item">lojinha</div>
-                                <div class="word-item">mercado</div>
                                 <div class="word-item">negócio</div>
                                 <div class="word-item">tienda</div>
                                 <div class="word-item">lojinha</div>
                                 <div class="word-item">mercado</div>
-                                <div class="word-item">negócio</div>
                             </div>
                         </div>
                     </h1>
