--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@
 
         @keyframes wordSlide {
             0% { transform: translateY(0); }
+            22% { transform: translateY(0); }
+            25% { transform: translateY(-80px); }
+            47% { transform: translateY(-80px); }
+            50% { transform: translateY(-160px); }
+            72% { transform: translateY(-160px); }
+            75% { transform: translateY(-240px); }
+            97% { transform: translateY(-240px); }
             100% { transform: translateY(-320px); }
         }
 
