--- a/index-figma.html
+++ b/index-figma.html
@@ -27,6 +27,13 @@
         }
         @keyframes slideWords {
             0% { transform: translateY(0); }
+            22% { transform: translateY(0); }
+            25% { transform: translateY(-104px); }
+            47% { transform: translateY(-104px); }
+            50% { transform: translateY(-208px); }
+            72% { transform: translateY(-208px); }
+            75% { transform: translateY(-312px); }
+            97% { transform: translateY(-312px); }
             100% { transform: translateY(-416px); }
         }
         .animated-words {
