--- a/index-figma.html
+++ b/index-figma.html
@@ -86,7 +86,8 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="min-h-screen pt-20 flex items-center">
+    <section class="min-h-screen pt-20 flex items-center bg-gradient-to-br from-yellow-400 via-yellow-500 to-orange-500 relative overflow-hidden">
+        <div class="absolute inset-0 bg-gradient-to-r from-yellow-400/10 via-transparent to-orange-500/10 pointer-events-none"></div>
         <div class="max-w-[1366px] mx-auto px-10 flex items-center gap-8">
             <!-- Content -->
             <div class="flex-1 pl-[110px] pr-8">
