--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
         /* Z-index crescente para últimos cards ficarem acima */
         .product-card:nth-child(1) {
-            top: 0; /* Primeiro card cola no topo */
+            top: 200px; /* Primeiro card fixa a 200px do topo */
             z-index: 1;
         }
 
