--- a/index-figma.html
+++ b/index-figma.html
@@ -47,7 +47,7 @@
         }
         
         .space-y-12 > div:nth-child(1) {
-            top: 0 !important; /* Primeiro card cola no topo */
+            top: 200px !important; /* Primeiro card fixa a 200px do topo */
             z-index: 1 !important;
         }
         
