🔧 Corrige comportamento do Card 4: Adiciona padding-bottom de 600px na seção products para permitir sticky correto do último card e scroll normal após

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
         /* Products Section */
         .products {
             padding: 84px 0;
+            padding-bottom: 600px; /* Espaço extra para permitir sticky do Card 4 e scroll normal */
             background: white;
         }
 
