--- a/index-figma.html
+++ b/index-figma.html
@@ -168,7 +168,7 @@
     </section>
 
     <!-- Products Section -->
-    <section class="py-20">
+    <section class="py-20 pb-[600px]">
         <div class="max-w-[1062px] mx-auto px-10">
             <!-- Title -->
             <div class="text-center mb-[84px]">
