🔧 Corrige sticky definitivo do Card 4: Aumenta padding-bottom para 1200px e adiciona min-height 2000px aos containers para garantir que Card 4 não 'passe por cima' dos outros

--- a/figma-design.html
+++ b/figma-design.html
@@ -41,6 +41,10 @@
         }
         
         /* Sticky Cards Effect */
+        .space-y-12 {
+            min-height: 2000px; /* Altura mínima para garantir sticky do Card 4 */
+        }
+        
         .space-y-12 > div {
             position: sticky !important;
         }
@@ -261,7 +265,7 @@
     </section>
 
     <!-- Products Section -->
-    <section class="py-20 pb-[600px]">
+    <section class="py-20 pb-[1200px]">
         <div class="max-w-[1062px] mx-auto px-10">
             <!-- Title -->
             <div class="text-center mb-[84px]">
