--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         /* Products Section */
         .products {
             padding: 84px 0;
-            padding-bottom: 600px; /* Espaço extra para permitir sticky do Card 4 e scroll normal */
+            padding-bottom: 1200px; /* Espaço extra aumentado para Card 4 sticky funcionar */
             background: white;
         }
 
@@ -231,6 +231,7 @@
             gap: 48px;
             max-width: 1062px;
             margin: 0 auto;
+            min-height: 2000px; /* Altura mínima para garantir sticky do Card 4 */
         }
 
         .product-card {
