--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         /* Products Section */
         .products {
             padding: 84px 0;
-            padding-bottom: 1200px; /* Espaço extra aumentado para Card 4 sticky funcionar */
+            padding-bottom: 200px; /* Espaço normal - Card 4 não é sticky */
             background: white;
         }
 
@@ -231,7 +231,6 @@
             gap: 48px;
             max-width: 1062px;
             margin: 0 auto;
-            min-height: 2000px; /* Altura mínima para garantir sticky do Card 4 */
         }
 
         .product-card {
@@ -266,7 +265,7 @@
         }
 
         .product-card:nth-child(4) {
-            top: 440px; /* 360px + 80px visíveis */
+            position: relative; /* Card 4 não é sticky - empurra todos para cima */
             z-index: 4;
         }
 
