🔧 Corrige comportamento final dos sticky cards: Card 4 mantém 80px do Card 3 visível, todos empilham corretamente e depois sobem juntos com padding-bottom 800px

--- a/index-figma.html
+++ b/index-figma.html
@@ -61,7 +61,7 @@
         }
         
         .space-y-12 > div:nth-child(4) {
-            position: relative !important; /* Card 4 não é sticky - empurra todos para cima */
+            top: 440px !important; /* 360px + 80px do Card 3 visível */
             z-index: 4 !important; /* Último card por cima */
         }
     </style>
@@ -168,7 +168,7 @@
     </section>
 
     <!-- Products Section -->
-    <section class="py-20 pb-[200px]">
+    <section class="py-20 pb-[800px]">
         <div class="max-w-[1062px] mx-auto px-10">
             <!-- Title -->
             <div class="text-center mb-[84px]">
