🔧 Corrige espaçamento entre seções: Reduz padding-bottom da seção products de 800px para 80px, mantendo 160px total entre seções (80px + 80px)

--- a/figma-design.html
+++ b/figma-design.html
@@ -261,7 +261,7 @@
     </section>
 
     <!-- Products Section -->
-    <section class="py-20 pb-[800px]">
+    <section class="py-20 pb-20">
         <div class="max-w-[1062px] mx-auto px-10">
             <!-- Title -->
             <div class="text-center mb-[84px]">
