--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         /* Products Section */
         .products {
             padding: 84px 0;
-            padding-bottom: 800px; /* Espaço para todos empilharem corretamente, depois subirem juntos */
+            padding-bottom: 80px; /* 80px + 80px da seção seguinte = 160px total */
             background: white;
         }
 
