🔧 Corrige texto do hero conforme Figma: 'Tienes un crédito para impulsar tu' → 'Creditos para impulsar tu' + atualiza título da página

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Créditos para impulsar tu negocio - Mercado Pago</title>
+    <title>Mercado Pago - Créditos para Impulsar tu Negocio</title>
     <link href="https://fonts.googleapis.com/css2?family=Proxima+Nova:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -812,7 +812,7 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1 class="hero-title">
-                        Tienes un crédito para impulsar tu 
+                        Creditos para impulsar tu 
                         <div class="animated-word-container">
                             <div class="animated-words">
                                 <div class="word-item">negócio</div>
